[package]
name = "log_std"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log_hal = "0.1.0"
time = { version = "0.2", feature="std" }
colored = "1.9.2"

